--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Map_Debug.Map_Debug
+GameDefaultMap=/Game/Maps/TowerMap.TowerMap
 GlobalDefaultGameMode=/Game/Blueprints/GameMode/GM_Platformer.GM_Platformer_C
-EditorStartupMap=/Game/Maps/Map_Debug.Map_Debug
+EditorStartupMap=/Game/Maps/TowerMap.TowerMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
